# predictum

./: .gitignore  .linera-config  CLEANUP_SUMMARY.md  CODE_REVIEW.md  CONTRACT_TESTING_STATUS.md  DEPLOYMENT_COMPLETE.md  Dockerfile  FINAL_STATUS.md  LICENSE  LINERA_CLI_COMMANDS.md  LINERA_CONNECTION_TEST.md  LINERA_INTEGRATION.md  LINERA_PROOF.md  MILESTONES.md  NEXT_STEPS.md  ORACLE_SERVICE.md  PROJECT_STRUCTURE.md  QUICK_PROOF.txt  QUICK_START.md  README.md  RUN_APP.md  SUBMISSION.md  UPDATE_LOG.md  compose.yaml  demo_linera_proof.sh  docker-compose.yml  run.bash
backend/: README.md  go.mod
backend/cmd/server/: main.go
backend/db/: schema.sql
backend/internal/db/: postgres.go
backend/internal/handlers/: handlers.go
backend/internal/linera/: client.go
backend/internal/models/: models.go
backend/internal/oracle/: coingecko.go  oracle.go
backend/internal/storage/: postgres_storage.go  storage.go
contract/: Cargo.toml  DEPLOYMENT_SUCCESS.md  FULL_CONTRACT_DEPLOYED.md  README.md  create-demo-markets.sh  create_market.json  operation.json
contract/src/: contract.rs  graphql_types.rs  lib.rs  service.rs  state.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  linera-client.ts  lineraClient.ts  lineraQueries.ts
frontend/src/components/: ErrorBoundary.tsx  Footer.tsx  Header.tsx  LineraDataCard.tsx  MarketCard.tsx  SkeletonCard.tsx
frontend/src/data/: mockMarkets.ts
frontend/src/pages/: Home.tsx  MarketDetail.tsx  MyBets.tsx  TestLinera.tsx
frontend/src/types/: index.ts  linera.ts
frontend/src/utils/: calculations.ts
linera-service/: Cargo.toml  README.md
linera-service/src/: linera_client.rs  main.rs
oracle-service/: go.mod
oracle-service/cmd/oracle/: main.go
