[package]
name = "linera-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"

# Note: Full Linera SDK integration requires more complex setup
# For MVP, we use HTTP client to call linera CLI or service
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true

