[package]
name = "linera-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

# Linera SDK for real blockchain operations
linera-sdk = "0.15"
linera-base = "0.15"
linera-execution = "0.15"
linera-views = "0.15"
linera-storage = "0.15"
linera-chain = "0.15"

# For wallet and keychain
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true

